fix text overlaps in firefox

--- a/css/main.css
+++ b/css/main.css
@@ -327,4 +327,12 @@ img.zoom {
     /*height: 100%;*/
     width: 100%;
 }
+#kontakt span{
+    /*display: block;*/
+    text-align:left;
+    color: #000;
+    position: absolute;
+    /*left: 115px;*/
+    padding: 1em 0 0 0;
+}
 
